--- a/Murn-27201103-2023.tex
+++ b/Murn-27201103-2023.tex
@@ -793,16 +793,15 @@ Tu je preslikava $a$ definirana v \eqref{eq:fja_a}.
 \subsection{Metrična dimenzija leksikografskega produkta glede na metrično 
 dimenzijo grafa $H$} \label{ss:mdim_komp_prod}
 
-%TA PODNASLOV NI NAJBOLJ POSREČEN\ldots
+%TA PODNASLOV NI NAJBOLJ POSREČEN
 V tem razdelku obravnavamo leksikografski produkt $G[H]$, kjer je $G$ povezan graf reda vsaj $2$ 
-in $H$ poljuben graf reda vsaj $2$, ki ima $k\geq 1$ komponent. 
-Naj bosta $a \in V(G)$ in $b \in V(H)$ poljubni vozlišči. 
-Za potrebe tega podpoglavlja vpeljimo naslednje oznake:
+in $H$ poljuben graf reda vsaj $2$, ki ima $k\geq 1$ komponent. Za komponente grafa $H$ naj velja:
+$$1 \leq |V(H_1)| \leq |V(H_2)| \leq \ldots \leq |V(H_k)|.$$ 
+Za poljubni $a \in V(G)$ in $b \in V(H)$ vpeljimo še naslednje oznake:
 \begin{itemize}
     \item $H(a) = \{ (a, v) \; | \; v \in V(H) \}$.
     \item $G(b) = \{ (v, b) \; | \; v \in V(G) \}$.
-    \item Če so $H_1, H_2, \ldots , H_k$ komponente grafa $H$, označimo 
-    $H_i(a) = \{ (a, v) \; | \; v \in V(H_i) \}$.
+    \item $H_i(a) = \{ (a, v) \; | \; v \in V(H_i) \}$.
 \end{itemize}
 
 Vzemimo sosednji vozlišči $a$, $b \in V(G)$. Vemo, da je vsako vozlišče iz $H_j(b)$ 
@@ -810,35 +809,43 @@ sosednje vsakemu iz $H_i(a)$ za vse $i, j \in \{1, 2, \ldots k\}$.
 Hitro lahko preverimo, da je inducirani podgraf grafa $G[H]$, kjer vzamemo eno 
 vozlišče iz množice $H_j(b)$ in vsa vozlišča iz $H_i(a)$, izomorfen grafu $H_i + K_1.$ 
 V nadaljevanju bomo pokazali, da lahko z metrično dimenzijo tega spoja grafov
-omejimo metrično dimenzijo $G[H]$.
-
-Naprej si oglejmo naslednje leme.
+navzgor omejimo metrično dimenzijo $G[H]$. Navzdol pa jo bomo omejili s pomočjo sledečih trditev.
 
 \begin{lema} \label{lema:1}
-    Naj bo $a\in V(G)$. Potem velja 
-    $$\forall x, y \in H(a) \; \forall z \in V(G[H]): d_{G[H]}(x,z) = d_{G[H]}(y,z).$$
+    Naj bosta $a, b \in V(G)$ različna. Potem velja 
+    \begin{enumerate}
+        \item $\forall x, y \in H(a) \; \forall z \in H(b): d_{G[H]}(x,z) = d_{G[H]}(y,z),$
+        \item $\forall x, y \in H_i(a) \; \forall z \in H_j(a): i \neq j \Rightarrow d_{G[H]}(x,z) = d_{G[H]}(y,z).$
+    \end{enumerate}
 \end{lema}
 
 \begin{dokaz}
-        Označimo $x = (a, u_i), \; y = (a, u_j), \; z = (b, u_k)$ za neke $u_i, u_j, u_k \in V(H)$ in $b \in V(G)$.
-        Denimo, da sta $a$ in $b$ različni. Potem po \eqref{eq:razdalja_produkta} velja 
+    Pokažimo vsako točko posebej.
+    \begin{enumerate}
+        \item Označimo $x = (a, u_i), \; y = (a, u_j), \; z = (b, u_k)$ za neke 
+        $u_i, u_j, u_k \in V(H)$.
+        Ker je $a \neq b$, po \eqref{eq:razdalja_produkta} sledi 
         $d_{G[H]}((a, u_i), (b, u_k)) = d_G(a, b) = d_{G[H]}((a, u_j), (b, u_k))$. 
-        Če pa $a = b$, po \eqref{eq:razdalja_produkta} velja $d_{G[H]}((a, u_i), (a, u_k)) = 
-        a_H(u_i, u_k) = d_{G[H]}((a, u_j), (a, u_k))$. 
+        \item Označimo $x = (a, u_i), \; y = (a, u_j), \; z = (a, u_k)$ za neke 
+        $u_i, u_j \in V(H_i), \; u_k \in V(H_j)$.
+        Po \eqref{eq:razdalja_produkta} sledi $d_{G[H]}((a, u_i), (a, u_k)) = 
+        a_H(u_i, u_k) = 2 = a_H(u_j, u_k)= d_{G[H]}((a, u_j), (a, u_k))$.
+    \end{enumerate} 
  \end{dokaz}
 
-\begin{lema} \label{lema:2}
-    Naj bo $W$ metrična baza grafa $G[H]$. Potem 
-   $$\forall a \in V(G) \; \forall i \in \{1, 2, \ldots, k\} : V(H_i) \geq 2 \Rightarrow W \cap H_i(a) \neq \emptyset.$$
-   Velja še več, $|W \cap H_i(a)| \geq \beta(H_i).$
-\end{lema}
+
+\begin{trditev} \label{trditev:mbaza_presek}
+    Naj bo $W$ metrična baza grafa $G[H]$. Označimo $W_i(a) = W \cap H_i(a)$. Potem 
+   $$\forall a \in V(G) \; \forall i \in \{1, 2, \ldots, k\} : V(H_i) \geq 2 \Rightarrow W_i(a) \neq \emptyset.$$
+   Velja še več, $|W_i(a)| \geq \beta(H_i).$
+\end{trditev}
 
 \begin{dokaz}
     Denimo, da obstaja $a \in V(G)$ za kateterega obstaja tak $i \in \{1, 2, \ldots, k\}$, da je
-    $V(H_i) \geq 2$ in velja $ W \cap H_i(a) = \emptyset$. Potem obstajata vsaj dve vozlišči iz $H_i(a)$ z različnimi
-    metričnimi predstavitvami glede na $W$, kar je v protislovju s \ref{lema:1}, saj je $H_i(a) \subseteq H(a)$.
+    $V(H_i) \geq 2$ in velja $ W_i(a) = \emptyset$. Potem obstajata vsaj dve vozlišči iz $H_i(a)$ z različnimi
+    metričnimi predstavitvami glede na $W$, za katerega velja $W \subseteq \cup $ kar je v protislovju s \ref{lema:1}, saj je $H_i(a) \subseteq H(a)$.
 
-    Označimo sedaj $W \cap H_i(a) = \{ (a, u_1), (a, u_2), \ldots , (a, u_t)\},$ kjer je $t \leq \beta(H_i).$
+    Označimo sedaj $W_i(a) = \{ (a, u_1), (a, u_2), \ldots , (a, u_t)\}$ in denimo, da je $t \leq \beta(H_i).$
     Oglejmo si množico $S = \{u_1, u_2, \ldots, u_t\},$ ki je podmnožica $V(H_i).$ Ker je $|S| \leq \beta(H_i),$
     obstajata dve voizlišči v $H_i$, ki imata enako metrično predstavitev glede na $S$. Označimo ti dve vozlišči
     z $x$ in $y$. Velja torej $d_{H_i}(x, u_i) = d_{H_i}(y, u_i)$ za vsak $u_i \in S$. Potem sledi tudi
@@ -847,44 +854,61 @@ Naprej si oglejmo naslednje leme.
     To pa je v protislovju s tem, da so vozlišča $(a, u_i)$ vsebovana v metrični bazi $W$.
 \end{dokaz}
 
-%bi to morda dala v poglavje z metrično dimenzijo?
 
-\begin{lema} \label{lema:3}
-    Naj bo $Q$ povezan graf. Obstaja metrična baza $S$ grafa $Q + K_1,$ da je 
-    $S \subseteq V(Q).$
+\begin{trditev}\label{trditev:mbaza_vsebovanost_vozlisc_iz_komponent_H}
+    Naj bo $W$ metrična baza grafa $G[H]$. Označimo $W(a) = W \cap H(a).$ Naj ima $H$ $m$
+    komponent z enim samim vozliščem, označimo jih $H_1, H_2, \ldots, H_m$. Potem $W(a)$ vsebuje vsaj $m-1$ 
+    vozlišč iz unije $ S = H_1(a) \cup H_2(a) \cup \ldots \cup H_m(a)$.
+\end{trditev}
+
+\begin{dokaz}
+    Označimo $S = \{(a, v_1), (a, v_2), \ldots, (a, v_m)\}$.
+    Denimo, da $W(a) \cap S < m-1$. Potem obstajata vsaj dve vozlišči $(a, v_i), (a, v_j) \in S,$ za kateri velja
+    $d((a, v_i), (a, w)) \neq d((a, v_i), (a, w)) \; \forall (a, w) \in W(a) \subseteq W.$  
+    Ker je $W(a) \subseteq H(a),$ je to v protislovju s \ref{lema:1}.
+\end{dokaz}
+
+
+\begin{lema} \label{lema:2}
+    Naj bo $Q$ povezan graf. Obstaja metrična baza $W$ grafa $Q + K_1,$ da je 
+    $W \subseteq V(Q).$
 \end{lema}
 % Preglej ta dokaz, malo ga ne razumem.
 \begin{dokaz}
-    Označimo množico vozlišč $V(Q + K_1) = V(Q) \cup \{ u \}.$ Naj bo $S$ 
-    metrična baza $Q + K_1$. Če $u \notin S$ je lema dokazana. 
+    Označimo množico vozlišč $V(Q + K_1) = V(Q) \cup \{ u \}.$ Naj bo $W$ 
+    metrična baza $Q + K_1$. Če $u \notin W$ je lema dokazana. 
     
-    Denimo $u \in S.$ 
+    Denimo $u \in W.$ 
     V tem primeru ločimo dve situaciji:
     \begin{enumerate}
-        \item $S \setminus \{ u \} = \emptyset$     
+        \item $W \setminus \{ u \} = \emptyset$     
         
         Po \ref{trd:mdim_polni_pot} sledi $Q + K_1 = P_n$, to pa je možno le za $Q = K_1$, 
-        torej za $n = 2$ po defniniciji spoja grafov v \ref{razredi_grafov}.
+        torej za $n = 2$ po defniniciji spoja grafov v \ref{def:spoj}.
      
         Hitro lahko preverimo, da je metrična baza grafa $P_2$ množica, ki vsebuje enega 
         od robnih vozlišč. Torej bi lahko namesto $v$, vzeli vozlišče, ki sestavlja graf 
-        $Q$ in tako dobimo metrično bazo $S \subseteq V(Q).$
+        $Q$ in tako dobimo metrično bazo $W \subseteq V(Q).$
         
-        \item $S \setminus \{ v \} \not = \emptyset$ 
+        \item $W \setminus \{ u \} \not = \emptyset$ 
         
-        Definirajmo $B = V(Q + K_1) \setminus S$ in naj bo $r = |B|,$ torej 
-        $B = \{b_1, b_2, \ldots, b_r\}$. Za $t \in \{1, 2, \ldots, r\}$ definiramo množici 
-        $S_t = S \cup \{b_t\}$ in $B_t = B \setminus \{b_t\}.$
-        Če obstaja $t$, da $\forall u \in B_t : \; r_{S_t}(u) \not = (1, 1, \ldots, 1),$
-        je lema dokazana. Sicer je $Q + K_1$ polen graf. Za poln graf pa lahko vzamemo
-        rešljivo množico, ki vsebuje vse razen enega vozlišča, torej $S = V(Q).$
+        Označimo $W = \{ v_1, v_2, \ldots , v_k, u\}$ in $B = V(Q + K_1) \setminus W = \{ v_{k+1}, v_{k+2}, \ldots, v_n\}$.
+        Želimo si vozlišče $u$ zamenjati z enim vozliščem iz $B$. Po definiciji \ref{def:spoj} vemo, da bo vozlišče
+        $u$ imelo metrično predstavitev $r_{W'}(u) = \1$ glede na katerokoli množico $W' \subseteq V(Q).$ 
+        Za $i \in \{k+1, k+2, \ldots, n\}$ definirajmo $W_i = W \cup \{v_i\}$ in $B_i = B \setminus \{v_i\}.$
+        $u$ torej lahko zamenjamo z drugim vozliščem le, če obstaja vozlišče $v_i \in B$ tako,
+        da velja $\forall v_j \in B_i : r_{W_i} (v_j) \neq \1.$ Če tak $v_i$ obstaja, ga 
+        zamenjamo z $u$ v $W$ in smo dobili iskano metrično bazo. 
+        
+        Če tako vozlišče ne obstaja, je $Q + K_1$ poln graf. Za poln graf pa lahko vzamemo
+        rešljivo množico, ki vsebuje vse razen enega vozlišča, torej $W = V(Q).$
     \end{enumerate}
 \end{dokaz}
 
 
-\begin{lema} 
+\begin{lema} \label{lema:3}
     Naj bo $a \in V(G)$ in $B_i$ metrična baza grafa $H_i + K_1,$ za katero velja $B_i \subseteq V(H_i).$
-    Označimo $W_i(a) = \{(a,x) | x \in B_i\}$ in $W(a) = \cup_{1 \leq i \leq k} W_i(a)$. 
+    Označimo $W_i(a) = \{(a,x) | \; x \in B_i\}$ in $W(a) = \cup_{1 \leq i \leq k} W_i(a)$. 
     Potem sta za $x, y \in V(H)$ ekvivalentni naslednji trditvi:
     \begin{enumerate}
         \item $r_{W(a)}(a, x) = r_{W(a)}(a, y);$
@@ -893,12 +917,16 @@ Naprej si oglejmo naslednje leme.
 \end{lema}
 
 \begin{dokaz}
-    TODO
+    $\Leftarrow$
+
+    Denimo 
+    $\Rightarrow$
+
+    Velja $d((a,x),(a,z)) = d((a,y),(a,z))$ za vsak $(a,z) \in W(a).$ 
 \end{dokaz}
 
 
-\begin{lema}
-    Naj bo $G$ povezan graf reda vsaj $2$ in $H$ graf reda vsaj $2$, ki vsebuje $k$ komponent.
+\begin{lema} \label{lema:4}
     Naj bo $a \in V(G)$ in $W$ metrična baza grafa $G[H].$ Označimo $W(a) = W \cap H(a).$ Potem velja:
     $$|W(a)| \leq \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) + k - 1.$$
 \end{lema}
@@ -911,7 +939,7 @@ Naprej si oglejmo naslednje leme.
 % PG(u, v). We define PG(u, v) = {PG(u, v)}. Let z be a vertex in V(G) \ V(PG(u, v)). If ℓ(PG(u, v))+ℓ(PG(v, z)) > ℓ(PG(u, z))
 % and ℓ(PG(u, v)) + ℓ(PG(u, z)) > ℓ(PG(v, z)), then each path in PG(u, v) is called an eccentric path of G.
 
-\begin{lema}
+\begin{lema} \label{lema:5}
     Naj bo $G$ povezan graf reda vsaj $2$ in $H$ graf reda vsaj $2$, ki vsebuje $k$ komponent.
     Naj bodo $a, b \in V(G)$. Označimo $W(a) = \cup_{a \in V(G)} W(a),$ kjer je $W(a)$ rešljiva množica za graf 
     $H(a)$. Potem za $x, y \in V(H)$ velja:
@@ -923,20 +951,15 @@ Naprej si oglejmo naslednje leme.
     TODO
 \end{dokaz}
 
-\begin{lema}
+\begin{trditev} \label{trditev:zgornja_meja_mdim_leksp}
     Naj bo $G$ povezan graf reda $n \geq 2$ in $H$ graf reda vsaj $2$, ki vsebuje $k$ komponent.
     $$\beta(G[H]) \leq 
     n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) + k - 1  \Bigr ) + (n-2). $$
-\end{lema}ž
+\end{trditev}ž
 
 \begin{dokaz}
     TODO
 \end{dokaz}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-\subsubsection{H je nepovezan graf} \label{sss:nepovezan}
-
 
 \begin{izrek} \label{izrek:omejitve_mdim_komp}
     Naj bo $G$ povezan graf reda $n \geq 2$ in $H$ poljuben graf reda $m \geq 2$, s $k \geq 1$ 
@@ -946,64 +969,71 @@ Naprej si oglejmo naslednje leme.
     \leq \beta(G[H]) \leq 
     n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) + k - 1  \Bigr ) + (n-2). 
     $$
-    \end{izrek}
-    % A BI MORAL IMET V TEM IZREKU H VSAJ DVE KOMPONENTI?
+\end{izrek}
+\begin{dokaz}
+
+\end{dokaz}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+\subsubsection{H je nepovezan graf} \label{sss:nepovezan}
+
+V dokazu naslednjega izreka bomo konstruirali grafe, katerih metrična dimenzija je enaka
+spodnji ali zgornji meji iz izreka \ref{izrek:omejitve_mdim_komp} ter dvema vmesnima vrednostima.
     
-    
-    V dokazu naslednjega izreka bomo konstruirali grafe, katerih metrična dimenzija je enaka
-    spodnji ali zgornji meji iz izreka \ref{izrek:omejitve_mdim_komp} ter dvema vmesnima vrednostima.
-    
-    \begin{izrek} \label{izrek:primeri_mdim_komp}
-    Obstajata taka grafa $G$ in $H$, da je $G$ povezan graf reda $n \geq 2$ in $H$ poljuben graf 
-    reda $m \geq 2$, s $k \geq 1$ komponentami $H_1, H_2, \dots , H_k$, da velja:
+\begin{izrek} \label{izrek:primeri_mdim_komp}
+Obstajata taka grafa $G$ in $H$, da je $G$ povezan graf reda $n \geq 2$ in $H$ poljuben graf 
+reda $m \geq 2$, s $k \geq 1$ komponentami $H_1, H_2, \dots , H_k$, da velja:
     \begin{enumerate}
         \item $\beta(G[H]) = n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p) \Bigr )  - 1  \Bigr )$.
         \item $\beta(G[H]) = n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) + k - 1 
-         \Bigr ) + (n-2)$.
+        \Bigr ) + (n-2)$.
         \item $\beta(G[H]) = n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) + k - 1  
         \Bigr )$.
         \item $\beta(G[H]) = n \cdot \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) $.
     \end{enumerate}
-    \end{izrek}
+\end{izrek}
     
-    \begin{dokaz}
-        \begin{enumerate}
-            \item Naj bo $G = P_n$, $n\geq 4$ in $H = N_k$, $k\geq 2$. 
-            Zaradi izreka \ref{izrek:omejitve_mdim_komp} je dovolj pokazati 
-            $\beta(G[H]) \leq n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p) \Bigr )  - 1  \Bigr ) = n 
-            \cdot (k - 1)$. Označimo $V(G) = \{p_1 , p_2, \ldots, p_n\}$, kjer so $\forall 1 \leq i < n : \; 
-            p_i p_{i+1} \in E(G)$, in $V(H) = \{ v_1, v_2, \ldots, v_k\}.$ Definirajmo množico 
-            $W = V(G[H]) \setminus G(v_k).$ Velja $|W| = n \cdot (k-1).$ 
-            Pokažimo, da je $W$ rešljiva množica. Opomba \ref{op:zadostno_preverjanje} nam pove, da je dovolj preveriti
-            vozlišča iz množice $G(v_k) = \{ (p_1, v_k), (p_2, v_k), \ldots, (p_n, v_k)\}$. Če se spomnimo formule
-            \eqref{eq:razdalja_produkta}, vidimo, da velja:
-            \begin{itemize}
-                \item $2 \leq d((p_i, v_k), (p_{j+1}, v_1)) \neq d((p_j, v_k), (p_{j + 1}, v_1)) = 1,$ 
-                za $ 1 \leq i \leq j < n $.
-                \item $2 \leq d((p_n, v_k), (p_{i-1}, v_1)) \neq d((p_i, v_k), (p_{i- 1}, v_1)) = 1,$ 
-                za $ 2 \leq i < n $.
-                \item $1 = d((p_1, v_k), (p_2, v_1)) \neq d((p_n, v_k), (p_2, v_1)) \geq 2.$
-            \end{itemize}
-            Sledi, da so metrične predstavitve vozlišč iz $G(v_k)$ paroma različne in je $W$ rešljiva množica.
+\begin{dokaz}
+    \begin{enumerate}
+        \item Naj bo $G = P_n$, $n\geq 4$ in $H = N_k$, $k\geq 2$. 
+        Zaradi izreka \ref{izrek:omejitve_mdim_komp} je dovolj pokazati 
+        $\beta(G[H]) \leq n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p) \Bigr )  - 1  \Bigr ) = n 
+        \cdot (k - 1)$. Označimo $V(G) = \{p_1 , p_2, \ldots, p_n\}$, kjer so $\forall 1 \leq i < n : \; 
+        p_i p_{i+1} \in E(G)$, in $V(H) = \{ v_1, v_2, \ldots, v_k\}.$ Definirajmo množico 
+        $W = V(G[H]) \setminus G(v_k).$ Velja $|W| = n \cdot (k-1).$ 
+        Pokažimo, da je $W$ rešljiva množica. Opomba \ref{op:zadostno_preverjanje} nam pove, da je dovolj preveriti
+        vozlišča iz množice $G(v_k) = \{ (p_1, v_k), (p_2, v_k), \ldots, (p_n, v_k)\}$. Če se spomnimo formule
+        \eqref{eq:razdalja_produkta}, vidimo, da velja:
+        \begin{itemize}
+            \item $2 \leq d((p_i, v_k), (p_{j+1}, v_1)) \neq d((p_j, v_k), (p_{j + 1}, v_1)) = 1,$ 
+            za $ 1 \leq i \leq j < n $.
+            \item $2 \leq d((p_n, v_k), (p_{i-1}, v_1)) \neq d((p_i, v_k), (p_{i- 1}, v_1)) = 1,$ 
+            za $ 2 \leq i < n $.
+            \item $1 = d((p_1, v_k), (p_2, v_1)) \neq d((p_n, v_k), (p_2, v_1)) \geq 2.$
+        \end{itemize}
+        Sledi, da so metrične predstavitve vozlišč iz $G(v_k)$ paroma različne in je $W$ rešljiva množica.
     
-            \item Naj bo $G = S_{n-1}$ zvezda na $n$ vozliščih, $n\geq 4$, in $H$ graf s $k \geq 2$ komponentami
-            $H_1, H_2, \ldots, H_k,$ kjer je $H_i = P_8.$ Velja $\beta(P_8 + K_1) = 
-            \Bigl \lfloor \frac{2\cdot 8 + 2}{5} \Bigr \rfloor = 3. $ % DOKAZ??
-            Zato je, podobno kot v prvi točki, dovolj pokazati  
-            $$\beta(G[H]) \geq n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) + k - 1 \Bigr ) + 
-            (n-2) = 4kn - 2.$$ 
-            Naj bo $B$ metrična baza $P_8 + K_1$, potem obstaja $v \in V(P_8),$ da je $r_B(v) = (2, 2, 2).$
+        \item Naj bo $G = S_{n-1}$ zvezda na $n$ vozliščih, $n\geq 4$, in $H$ graf s $k \geq 2$ komponentami
+        $H_1, H_2, \ldots, H_k,$ kjer je $H_i = P_8.$ Velja $\beta(P_8 + K_1) = 
+        \Bigl \lfloor \frac{2\cdot 8 + 2}{5} \Bigr \rfloor = 3. $ % DOKAZ??
+        Zato je, podobno kot v prvi točki, dovolj pokazati  
+        $$\beta(G[H]) \geq n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) + k - 1 \Bigr ) + 
+        (n-2) = 4kn - 2.$$ 
+        Naj bo $B$ metrična baza $P_8 + K_1$, potem obstaja $v \in V(P_8),$ da je $r_B(v) = (2, 2, 2).$
             %DOKAZ??
     
-            Recimo, da je $\beta(G[H]) < 4kn - 2,$ in naj bo $W$ metrična baza $G[H]$. 
+        Recimo, da je $\beta(G[H]) < 4kn - 2,$ in naj bo $W$ metrična baza $G[H]$. 
             
-            TODO
+        TODO
     
-            \item TODO
-            \item TODO
+        \item TODO
+        \item TODO
     
-        \end{enumerate}
-    \end{dokaz}
+    \end{enumerate}
+\end{dokaz}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1046,8 +1076,8 @@ V tem podpoglavju bomo obravnavali metrično dimenzijo leksikografskega produkta
 podlagi reda grafa $G$ in sosedske dimenzije grafa $H$. 
 
 \begin{lema}
-    Naj bo $G$ povezan graf reda $n$ in $H$ poljuben graf. Potem velja
-    $\beta(G[H]) \geq n \cdot \mu(H).$
+    Naj bo $G$ povezan graf reda $n$ in $H$ poljuben graf. Potem velja:
+    $$\beta(G[H]) \geq n \cdot \mu(H).$$
 \end{lema}
 
 \begin{dokaz}
